# ctmao-nsd-reference

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WORKSPACE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  hardening.md
examples/: two_threads.py
src/ctmao_nsd/: __init__.py  agent.py  child_agent.py  config.py  context.py  delegation.py  events.py  logging_config.py  memory.py  orchestrator.py  supervisor.py  thread_manager.py  types.py
tests/: test_delegation.py  test_memory.py  test_orchestrator.py  test_thread_manager.py
