[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctmao-nsd-reference"
version = "0.1.1"
description = "Experimental Python concurrency reference for isolated workers and bounded hierarchical delegation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "CTMAO-NSD contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Repository = "https://github.com/bundleguard/ctmao-nsd-reference"
Issues = "https://github.com/bundleguard/ctmao-nsd-reference/issues"
Documentation = "https://github.com/bundleguard/ctmao-nsd-reference#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["ctmao_nsd"]
